{
    "name": "WeaponInput",
    "maps": [
        {
            "name": "Weapon",
            "id": "488daba3-c4a7-443b-ab0d-e4d67788c7b8",
            "actions": [
                {
                    "name": "FirePressed",
                    "type": "Button",
                    "id": "2f9bd277-77c3-4b04-9829-a57ee30002ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FireReleased",
                    "type": "Button",
                    "id": "fe8969d3-f397-451b-9098-0678f1a2ca59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseScroll",
                    "type": "PassThrough",
                    "id": "e5f8b57a-7eb8-4af9-9345-19191b507b92",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "c00463ae-d8f5-4c27-b79b-c6e22e505c23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d5773c7-510b-47a8-90eb-1250033ce03d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "FirePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcb709ac-e09a-436c-a60a-4bc45f3da0bb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "FireReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9c37576-72c4-4c24-b5de-38d0bf628406",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cd12485-3930-42dd-a23c-976ec5e395d8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}